FEATURE: UI    | Right-click header option on Progress column to disable 3D look [Parg]
FEATURE: UI    | Added option to disable gradient fill for table/sidebar selection [Parg]
FEATURE: UI    | Added private-torrent column to Library [Parg]
FEATURE: UI    | Option to disable table header gradient fill [Parg]
FEATURE: UI    | Order column header menu option to set from current sort [Parg]

CHANGE: Tag    | Change cat/tag library button alignment to right when no title [Parg]
CHANGE: Tag    | Auto-tag BiglyBT update torrents [Parg]
CHANGE: Tag    | Remove the option to set a Tag as "public" when it can't be public [Parg]
CHANGE: Tag    | Reworked tag group rename a bit [Parg]
CHANGE: Core   | Enforce a minimum TCP outgoing peer connection timeout [Parg]
CHANGE: Core   | Base re-check order on remaining not overall size [Parg]
CHANGE: Core   | Improve search for existing files when multiple candidates [Parg]
CHANGE: Core   | Re-apply up/down rate limits when peer reconnects [Parg]
CHANGE: Core   | More efficient subscription result marking for multiple selection [Parg]
CHANGE: Core   | Select IPv4 tracker override address over IPv6 for UDP [Parg]
CHANGE: UI     | Remove spaces from hash strings copied to clipboard in a few places [Parg]
CHANGE: UI     | Show "search for existing files" in fancy menu for stopped downloads [Parg]
CHANGE: UI     | If we're trying to show options make sure mode is high enough [Parg]
CHANGE: UI     | Don't allow combo/spinner to grab mouse-wheel scroll from config panel [Parg]
CHANGE: UI     | Open multiple torrent options dialogs behind active one [Parg]
CHANGE: UI     | Darker config section highlight in dark mode [Parg]
CHANGE: UI     | Swarm view rework [Parg]
CHANGE: UI     | CTRL+enter in open-url dialog to accept input [Parg]
CHANGE: UI     | Request attention for download that moves to incomplete from complete [Parg]
CHANGE: UI     | Don't prompt a bazillion times on multiple tag import [Parg]