@@ -5427,6 +5427,8 @@ ConfigView.section.style.header.gradient=Gradient fill header
 menu.set.order.from.sort=Set {TableColumn.header.#} from Current Sort
 menu.set.order.for.selection=Set {TableColumn.header.#} for Current Selection
 ConfigView.label.skipIncompDLFileChecks=Defer incomplete download file checks until first use - improves startup times but may result in errors later
+Peers.column.havetheyneed=Wanted
+Peers.column.havetheyneed.info=Percentage of what you have that the peer doesn't
 
 
 #
