@@ -81,6 +81,7 @@ PeersViewBase
 				new PiecesItem(table_id),
 				new PercentItem(table_id),
 				new PercentHaveWeNeedItem(table_id),
+				new PercentHaveTheyNeedItem(table_id),
 				new DownSpeedItem(table_id),
 				new UpSpeedItem(table_id),
 				new PeerSourceItem(table_id),
